[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restless-guest"
version = "1.0.0"
description = "Azure Guest Access Management Tool"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "roadtools>=0.0.2",
    "selenium>=4.0.0",
]

[project.scripts]
restless-guest = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "venv*", "restless-guest-env*"]

[tool.setuptools]
py-modules = ["main", "commands", "config", "auth", "arm_api", "graph_api", "jwt_utils"]
